crates/toml_edit/tests/snapshots/invalid/float/trailing-exp-point.stderr
TOML parse error at line 1, column 25
  |
1 | trailing-exp-point =  0.e
  |                         ^
invalid floating-point number
expected digit
